RESOLVED FIXED82249
DFG should assert that argument value recoveries can only be AlreadyInRegisterFile or Constant
https://bugs.webkit.org/show_bug.cgi?id=82249
Summary DFG should assert that argument value recoveries can only be AlreadyInRegiste...
Filip Pizlo
Reported 2012-03-26 15:47:49 PDT
This is what Arguments relies on already, but the DFG asserts something weaker.
Attachments
the patch (3.63 KB, patch)
2012-03-26 15:50 PDT, Filip Pizlo
msaboff: review+
Filip Pizlo
Comment 1 2012-03-26 15:50:40 PDT
Created attachment 133912 [details] the patch
Filip Pizlo
Comment 2 2012-03-26 15:59:14 PDT
Note You need to log in before you can comment on or make changes to this bug.