DFG should assert that argument value recoveries can only be AlreadyInRegisterFile or Constant https://bugs.webkit.org/show_bug.cgi?id=82249

Reviewed by Michael Saboff.

Made the assertions that the DFG makes for argument value recoveries match
what Arguments expects.

* bytecode/ValueRecovery.h:
(JSC::ValueRecovery::isConstant):
(ValueRecovery):
(JSC::ValueRecovery::isAlreadyInRegisterFile):
* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compile):



Canonical link: https://commits.webkit.org/99601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112164 268f45cc-cd09-0410-ab3c-d52691b4dbfc